# scade-apitools

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  AUTHORS.md  ApiTools.pyproj  ApiTools.sln  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.rst  index.html  pyproject.toml  pytest.ini  robots.txt  setup.py  sitemap.xml  tox.ini  versions.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml  labels.yml
.github/test-pytest-with-scade/: action.yml
.github/workflows/: ci_cd.yml  label.yml
.reuse/: dep5
doc/: .vale.ini  Makefile  make.bat
doc/changelog.d/: 102.dependencies.md  104.test.md  105.maintenance.md  109.dependencies.md  110.maintenance.md  113.miscellaneous.md  114.dependencies.md  114.miscellaneous.md  115.maintenance.md  118.miscellaneous.md  119.miscellaneous.md  121.miscellaneous.md  123.miscellaneous.md  124.miscellaneous.md  127.miscellaneous.md  129.miscellaneous.md  131.miscellaneous.md  132.miscellaneous.md  135.miscellaneous.md  136.miscellaneous.md  137.miscellaneous.md  139.miscellaneous.md  140.miscellaneous.md  141.dependencies.md  141.miscellaneous.md  142.miscellaneous.md  143.miscellaneous.md  144.miscellaneous.md  145.maintenance.md  146.fixed.md  147.maintenance.md  148.dependencies.md  149.dependencies.md  151.fixed.md  154.maintenance.md  155.maintenance.md  157.maintenance.md  158.maintenance.md  159.fixed.md  160.maintenance.md  (+5 more)
doc/source/: changelog.rst  conf.py  contributing.rst  create.rst  examples.rst  guide.rst  index.rst  modules.rst  scripting.rst
doc/source/_ext/: ex.py
doc/source/_lexers/: swan.py  test.swan
doc/source/_static/: custom.css
doc/source/_templates/: sidebar-nav-bs.html
doc/source/examples/: create.rst  create_if_block.rst  create_interface.rst  create_make.rst  create_state_machine.rst  create_top_level.rst  create_when_block.rst
doc/source/getting_started/: index.rst
doc/source/user_guide/: create.rst  index.rst  scripting.rst
examples/create/: .gitignore
examples/create/if_block/: create_if_block.py  debug_create_if_block.py
examples/create/interface/: create_interface.py  debug_create_interface.py  interface.txt
examples/create/make/: create_make.py  debug_create_make.py
examples/create/state_machine/: create_state_machine.py  debug_create_state_machine.py
examples/create/top_level/: create_top_level.py  debug_create_top_level.py
examples/create/when_block/: create_when_block.py  debug_create_when_block.py
examples/expr_access/: Access.xscade  ExprAccess.etp  ExprAccess.vsw  activate_no_init_op.py  activate_op.py  binary_op.py  case_op.py  chg_ith_op.py  const_value.py  data_array_op.py  data_struct_op.py  fby_op.py  flatten_op.py  id_expression.py  if_then_else_op.py  init_op.py  iterator_op.py  last.py  make_op.py  n_ary_op.py  numeric_cast_op.py  op_call.py  partial_iterator_op.py  pre_op.py  present.py  prj_dyn_op.py  prj_op.py  restart_op.py  scalar_to_vector_op.py  sharp_op.py  slice_op.py  styles.tot  text_expression.py  transpose_op.py  unary_op.py
examples/info/: Info.etp  get_scade_home.py  get_scade_properties.py  get_scade_version.py  ide.py  print.py
examples/prop_pragma/: PropPragma.etp  PropPragma.vsw  pragma.py  pragma_json.py  pragma_tool.py
examples/query_type/: QueryType.vsw  Types.xscade  get_cell_type.py  get_leaf_alias.py  get_leaf_type.py  get_type_name.py  is_array.py  is_enum.py  is_imported.py  is_predefined.py  is_scalar.py  is_structure.py
requirements/: requirements_doc.txt
tests/: conftest.py  sandbox.py  test_access.py  test_auto_scade_env.py  test_create_data_def.py  test_create_declaration.py  test_create_expression.py  test_create_project.py  test_create_scade.py  test_create_type.py  test_install.py  test_metadata.py  test_pragma.py  test_query_type.py  test_runtime.py  test_utils.py
tests-pytest/: action.yml
tests/resources/CreateDataDef/: CreateDataDef.etp  CreateDataDef.vsw  DataFlows.xscade  Edges.xscade  EquationSets.xscade  IfBlocks.xscade  P.xscade  Scopes.xscade  StateMachines.xscade  States.xscade  WhenBlocks.xscade
tests/resources/CreateDeclaration/: CreateDeclaration.etp  CreateDeclaration.vsw  IO.xscade  IOOther.xscade  Imported.xscade  Operator.xscade  Package.xscade  Type.xscade
tests/resources/CreateProject/: CreateProject.etp  CreateProject.vsw
tests/resources/CreateScade/: CreateScade.etp  CreateScade.vsw
tests/resources/CreateType/: CreateType.etp  CreateType.vsw  CreateType.xscade  Package.xscade
tests/resources/EmptySession/: EmptySession.etp  EmptySession.vsw
tests/resources/ExprAccess/: ExprAccess.etp  ExprAccess.xscade
tools/scripts/: dump_diagrams.py  run_example.py  scripts.pyproj  update_examples.py
tools/update_doc/: update_doc.py  update_doc.pyproj
version/: index.html
version/0.1/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.2/: .buildinfo  announcement.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.3/: .buildinfo  create.html  examples.html  genindex.html  guide.html  index.html  modules.html  objects.inv  py-modindex.html  scripting.html  search.html  searchindex.js
version/0.4/: .buildinfo  contributing.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.5/: changelog.html  contributing.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.6/: changelog.html  contributing.html  examples.html  index.html  objects.inv  py-modindex.html  searchindex.js
version/0.7/: contributing.html  examples.html  index.html  objects.inv  py-modindex.html
version/dev/: .buildinfo  changelog.html  contributing.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/stable/: .buildinfo  changelog.html  contributing.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
(+2486 files in other folders)
