[build-system]
requires = [
    "flit_core >=3.9,<3.12; python_version < '3.8'",
    "flit_core >=3.12,<4; python_version >= '3.8'",
]
build-backend = "flit_core.buildapi"

[project]
name="ansys-scade-apitools"
version="0.5.dev0"
description ="An extension library for SCADE Python APIs."
readme="README.rst"

# only 3.7, 3.10, or >= 3.12
requires-python = ">=3.7,!=3.8.*,!=3.9.*,!=3.11.*"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Ansys, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "Ansys, Inc.", email = "pyansys.core@ansys.com"},
]
dependencies=[
    "importlib-metadata >= 1.0; python_version < '3.8'",
    "importlib-metadata >= 4.0; python_version >= '3.8'",
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]
keywords=["Scade", "Api", "Tools"]

[project.optional-dependencies]
build = [
    "build==1.4.1",
    "twine==6.2.0"
]
tests = [
    "pytest==7.4.0; python_version < '3.8'",
    "pytest-cov==4.1.0; python_version < '3.8'",
    "pytest==8.4.2; python_version >= '3.8'",
    "pytest-cov==7.1.0; python_version >= '3.8'",
]
doc = [
    "ansys-sphinx-theme[autoapi]==1.7.0; python_version >= '3.12'",
    "ansys-sphinx-theme[autoapi]==1.3.2; python_version <= '3.10'",
    "autodoc_pydantic==2.2.0",
    "jupyter_sphinx==0.5.3",
    "nbsphinx==0.9.8",
    "numpydoc==1.9.0",
    "sphinx==9.1.0; python_version >= '3.12'",
    "sphinx==8.1.3; python_version <= '3.10'",
    "sphinx-autoapi<=3.6.1",
    "sphinx-autodoc-typehints==3.6.2; python_version >= '3.12'",
    "sphinx-autodoc-typehints==3.0.1; python_version <= '3.10'",
    "sphinxcontrib-globalsubs==1.1.0; python_version >= '3.12'",
    "sphinxcontrib-globalsubs==0.1.2; python_version <= '3.10'",
    "sphinxcontrib-httpdomain==1.8.1",
    "sphinx-copybutton==0.5.2",
    "sphinx-jinja==2.0.2",
    "sphinxnotes-strike==2.0; python_version >= '3.12'",
    "sphinxnotes-strike==1.2.1; python_version <= '3.10'",
]


[project.urls]
Source = "https://github.com/ansys/scade-apitools"
Issues = "https://github.com/ansys/scade-apitools/issues"
Discussions = "https://github.com/ansys/scade-apitools/discussions"
Documentation = "https://apitools.scade.docs.pyansys.com"
Releases = "https://github.com/ansys/scade-apitools/releases"
Homepage = "https://www.ansys.com/products/embedded-software/ansys-scade-suite"



[tool.flit.module]
name = "ansys.scade.apitools"


[tool.ruff]
line-length = 100
fix = true

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle, see https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "D",    # pydocstyle, see https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "F",    # pyflakes, see https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",    # isort, see https://docs.astral.sh/ruff/rules/#isort-i
    "N",    # pep8-naming, see https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "PTH",  # flake8-use-pathlib, https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "TD",   # flake8-todos, https://docs.astral.sh/ruff/rules/#flake8-todos-td
]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["ansys", "conftest", "test_utils"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D",]


[tool.coverage.run]
source = ["ansys.scade.apitools"]
patch = ["subprocess"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "@(abc\\.)?abstractmethod",
]


[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-ra --cov=ansys.scade.apitools --cov-report html:.cov/html --cov-branch --cov-report xml:.cov/xml --cov-report term -vv"


[tool.towncrier]
package = "ansys.scade.apitools"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
start_string = ".. towncrier release notes start\n"
template = "doc/changelog.d/changelog_template.jinja"
title_format = "`{version} <https://github.com/ansys/scade-apitools/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/scade-apitools/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[tool.codespell]
ignore-words-list = ["synopsys"]

[tool.numpydoc_validation]
checks = [
    'GL06',  # Found unknown section
    'GL07',  # Sections are in the wrong order.
    # Disabled the docstring validation as most of the methods doesn't have the docstring
    # TODO: Add docstring and enable GL08 validation
    # 'GL08',  # The object does not have a docstring
    'GL09',  # Deprecation warning should precede extended summary
    'GL10',  # reST directives {directives} must be followed by two colons
    'SS01',  # No summary found
    'SS02',  # Summary does not start with a capital letter
    'SS03',  # Summary does not end with a period
    'SS04',  # Summary contains heading whitespaces
    # "SS05", # Summary must start with infinitive verb, not third person
    'RT02',  # The first line of the Returns section should contain only the
    # type, unless multiple values are being returned"
]
exclude = [
    '\._',  # ignore private definitions
    'conftest.',
    'test.',
]

